# guide

./: .eslintignore  .eslintrc.json  .gitignore  .gitpod.dockerfile  .gitpod.yml  .prettierignore  .prettierrc.json  .stylelintignore  .stylelintrc.json  AGENTS.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  Dockerfile.localdev  LICENSE  Makefile  README.md  app.json  db.sqlite3  docker-compose.yml  heroku.yml  manage.py  monkey_patches.py  package-lock.json  package.json  promptfooconfig.yaml  pyproject.toml  ruff.toml  setup.cfg  webpack.config.js
.agents/skills/create-pull-request/: SKILL.md
.agents/skills/manage-wagtail-redirects/: SKILL.md  manage_wagtail_redirects.py
.agents/skills/write-release-notes/: SKILL.md
.github/workflows/: ci.yml  test.yml
apps/: monkey_patches.py
apps/content/: apps.py  blocks.py  models.py
apps/content/migrations/: 0001_initial.py
apps/core/: apps.py  blocks.py  factories.py  middleware.py  mixins.py  monkey_patches.py  views.py  wagtail_hooks.py
apps/core/migrations/: 0001_initial.py  0002_alter_contentpage_body.py  0002_contentpage_table_of_contents.py  0003_contentpage_table_of_contents.py  0004_feedback.py  0005_alter_feedback_options.py  0006_footercontent_footeritem.py  0007_initial_footercontent.py  0008_homepage_introduction.py  0009_default_homepage_introduction.py  0010_alter_homepage_introduction.py  0010_sectionpage.py  0011_alter_footercontent_locale_alter_footeritem_locale.py  0012_alter_contentpage_body.py  0012_remove_contentpage_table_of_contents.py  0013_alter_contentpage_body.py  0014_alter_contentpage_body.py
apps/core/models/: __init__.py  content.py  feedback.py  home.py  snippets.py
apps/core/templates/: 404.html  500.html  base.html
apps/core/templatetags/: core_tags.py
apps/core/tests/: test_alternate_link_tag.py  test_content_page.py  test_feedback.py  test_footer.py  test_header.py  test_homepage.py  test_locales.py  test_management_commands.py  test_middleware.py  test_navigation.py  test_page_response.py  test_previous_page_and_next_page.py  test_text_block_annotated.py  test_versioned_url_redirect.py
apps/custom_media/: factories.py  image_formats.py  models.py
apps/custom_media/migrations/: 0001_initial.py  (+4 more)
apps/custom_user/: models.py
apps/guide/: jinja2.py  urls.py  views.py  wsgi.py
apps/home/: blocks.py  models.py
apps/llms_txt/: apps.py  jinja2tags.py  mixins.py  rich_text.py  views.py
apps/richtext/: wagtail_hooks.py
apps/search/: views.py
cloudflare/: caching-worker.js
content/: blocks.py  models.py
content/migrations/: 0001_initial.py
docs/: demo-access.md  hosting-environment.md  style-guide.md  test-plans.md
docs/wagtail-skip-link/: skip-link-guide.md
guide/settings/: base.py  dev.py  production.py
guide/templates/: base.html
guide/tests/: test_page_response.py
home/: models.py
prompts/: README.md
prompts/content/: fetch_content.py
prompts/evals/: page-meta.yaml
public/: robots.txt
public/.well-known/: ai-catalog.json
requirements/: base.txt  development.txt  production.txt
(+263 files in other folders)
