[tool.poetry]
name = "guide"
version = "0.1.0"
description = "Wagtail User Guide"
authors = ["Guide contributors <no-reply@guide.wagtail.org>"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
django = ">=5.0,<5.1"
wagtail = ">=5.2,<6.0"
django-manifest-loader = "^1.0.0"
lxml = ">=4.9,<7"
djangorestframework = ">=3.13.1,<4.0"
dj-database-url = ">=2.1,<2.2"
django-storages = ">=1.14,<1.15"
whitenoise = ">=6.6,<6.7"
psycopg = "~3.2.10"
wagtail-localize = "1.8"
django-permissions-policy = "^4.13.0"
django-csp = "^3.7"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.4"
django-extensions = "^3.2.1"
wagtail-factories = "^4.1.0"
coverage = "^7.3.2"

[tool.poetry.group.production.dependencies]
gunicorn = "21.2.0"
django-redis = ">=5.4,<5.5"
sentry-sdk = ">=1.34,<1.35"
django-basic-auth-ip-whitelist = "0.6.0"
boto3 = "^1.24.93"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
